k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-production-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devops-production-app
  template:
    metadata:
      labels:
        app: devops-production-app
    spec:
      containers:
        - name: devops-production-app
          image: 032504371978.dkr.ecr.us-east-1.amazonaws.com/devops-production-app:latest
          ports:
            - containerPort: 80
