k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-production-service
spec:
  selector:
    app: devops-production-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
